<resources>
    <string name="app_name">login</string>
    <string name="user">Usuario</string>
    <string name="clave">Contraseña</string>
    <string name="btn1">INGRESAR</string>
    <string name="btn2">REGISTRARSE</string>
    <string name="saludo">¡Bienvenido de nuevo %s!</string>
    <string name="titulo">INICIAR SESION</string>
    <string name="btnAcercaDe">CONTINUAR</string>







</resources>